--- a/VRChat/87/1357587.html
+++ b/VRChat/87/1357587.html
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/34d02bac3ae4f808674f.js" defer=
+    "https://asset.booth.pm/assets/d0b74dab23351869d989.js" defer=
     "defer" nonce=
-    "O0XhT6POjhIDVlJpSzOJSq7mL6uPewUWvSXaIZ2eOw4="></script>
+    "BQpm3ngvoQuw/cHysIQ//kVclv6Ek3I7qzj3PSX8XsU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【#VRoid】【無償有】うさぎスクールコーデセット","description":"本品はunnun.というブランドが制服を手がけたら…？というコンセプトのもとアレンジされた、女性用制服のセットです。\n\nポイントは紺色の落ち着いたベストと靴下に刺繍されたunnun.のうさぎロゴ。\n公立っぽい親しみやすさと、私立のような特別感。\n様々な制服アレンジにお使いいただければ幸いです！\n\n●ご支援版には1枚めの画像に使用しているチェックの背景が付いてきます。\n着用モデルはこちら\n‪https://hub.vroid.com/characters/3603050839015391181/models/2817980265193239481‬\n\n【添付ファイル】\n▼衣装テクスチャ\n・layer_accessory_ribbon.png\n・layer_body_best.png\n・layer_body_skirts.png\nベースの制服(半袖)に対応しているテクスチャです。紺色と赤色のチェックが目立ちます。\nそれぞれリボン、ベスト、スカートにテクスチャを貼り付けてお使いください。\n\n▼肌テクスチャ\n・layer_body_sox.png\nうさぎロゴの刺繍がかわいい、白ソックスです。\nローファーに合わせてもスニーカーに合わせてもキュートです。\n肌レイヤーに重ねてお使いください。\n\n\n【利用に関して】\n・動画配信時の衣装として着たり、VRChat、cluster、VRoid Hubへの投稿\n 各種VRM対応サービスへのおでかけなど、ご自由にお使いください。\n・この衣装を着たモデルの商用利用は可能です。\n・使用時の報告やクレジットは不要です。\n・ハッシュタグ#unnun をつけたツイートや\n ツイッターアカウント(@moucou)へのリプライをいただけると、今後の励みになります！\n・改変および再配布、販売は禁止しております。","url":"https://booth.pm/ja/items/1357587","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"500"},"image":"https://booth.pximg.net/c/620x620/2f22ec23-4d27-4849-8531-81e2965bdbb4/i/1357587/29cd1aa1-bc5e-4def-a6ee-bf43efbbd895_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="O0XhT6POjhIDVlJpSzOJSq7mL6uPewUWvSXaIZ2eOw4="></script>
+    nonce="BQpm3ngvoQuw/cHysIQ//kVclv6Ek3I7qzj3PSX8XsU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -739,7 +739,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;},{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;},{&quot;label&quot;:&quot;デザインフェスタ vol.57&quot;,&quot;value&quot;:&quot;designfesta57&quot;}]"
+    "[{&quot;label&quot;:&quot;I・Doll VOL.68&quot;,&quot;value&quot;:&quot;i-doll68&quot;},{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;},{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
